// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkDialingCodeListItem should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackgroundBorderless",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 8,
      "paddingVertical": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            null,
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "rgb(230, 228, 235)",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderRadius": 10,
            "height": 10,
            "width": 10,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Android BpkDialingCodeListItem should support the "flagImage" property 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackgroundBorderless",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 8,
      "paddingVertical": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      resizeMode="contain"
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            null,
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "rgb(230, 228, 235)",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderRadius": 10,
            "height": 10,
            "width": 10,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Android BpkDialingCodeListItem should support the "selected" property 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel="44 United Kingdom"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hitSlop={undefined}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackgroundBorderless",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 8,
      "paddingVertical": 16,
    }
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 1,
          },
          Object {
            "height": 16,
            "width": 24,
          },
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
          Array [
            Object {
              "flex": 1,
              "marginLeft": 24,
            },
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      44
       
      United Kingdom
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "rgb(230, 228, 235)",
          "borderRadius": 20,
          "borderWidth": 2,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        Object {
          "borderColor": "rgb(0, 178, 214)",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderRadius": 10,
            "height": 10,
            "width": 10,
          },
          Object {
            "backgroundColor": "rgb(0, 178, 214)",
          },
        ]
      }
    />
  </View>
</View>
`;
